--- a/metadata/jenkins_shell_command.erb
+++ b/metadata/jenkins_shell_command.erb
@@ -3,7 +3,7 @@ alias rsync="rsync --delete-after -azO -e '$GIT_SSH'"
 upstream_ssh="<%= ENV['OPENSHIFT_GEAR_UUID'] %>@<%= ENV['OPENSHIFT_APP_NAME'] %>-${OPENSHIFT_NAMESPACE}.<%= ENV['OPENSHIFT_CLOUD_DOMAIN'] %>"
 
 # Sync libs - Faster builds
-rsync $upstream_ssh:~/redhat-ceylon/data/ceylon_repo/ ~/redhat-ceylon/data/ceylon_repo/
+rsync $upstream_ssh:~/.node ~/ceylon/data/ceylon_repo/
 
 # Build/update libs and run user pre_build and build
 gear build
@@ -13,10 +13,10 @@ gear build
 # Deploy new build
 
 # Stop app
-$GIT_SSH $upstream_ssh 'gear stop'
+$GIT_SSH $upstream_ssh 'gear stop --conditional'
 
 # Push content back to application
-rsync ~/redhat-ceylon/data/ceylon_repo/ $upstream_ssh:~/redhat-ceylon/data/ceylon_repo/
+rsync ~/ceylon/data/ceylon_repo/ $upstream_ssh:~/ceylon/data/ceylon_repo/
 
 # Configure / start app
-$GIT_SSH $upstream_ssh 'gear cideploy'
+$GIT_SSH $upstream_ssh 'gear remotedeploy'
