Fix typo: OpenShif -> OpenShift

--- a/template/web-content/index.html
+++ b/template/web-content/index.html
@@ -72,7 +72,7 @@ li {
 
 <p> OpenShift is configured to execute toplevel method "run" in a "ceylon.demo.net" module. You can change module name in "ceylon.properties" file located in "myfirstapp/.openshift/config/".</p>
 
-<p> When you push Ceylon sources, they are compiled by OpenShif, if you want to upload pre compiled modules, you can place them in "myfirstapp/.openshift/modules/" folder.</p>
+<p> When you push Ceylon sources, they are compiled by OpenShift, if you want to upload pre compiled modules, you can place them in "myfirstapp/.openshift/modules/" folder.</p>
 
 <h2>Sample Application</h2>
 <p> The page you are currently readying is static, take a look at dynamic example <a href="todo">In Session ToDo List</a>.</p>
