--- a/template/web-content/index.html
+++ b/template/web-content/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     
     <title>Welcome to Ceylon</title>
-    
+
     <style>
 html {
 	background: #f3f3f3;
@@ -65,10 +65,14 @@ li {
     
     <h1>Welcome to Ceylon on OpenShift</h1>
     
-    <p>Starting with this skeleton project, you can write your 
-    own Ceylon web application to replace the 
-    <a href="todo">sample TODO list application</a> and deploy
+    <p>This is a skeleton project that you can use as a starting
+    point to write your own Ceylon web application and deploy
     it to OpenShift.</p>
+    
+    <p>The project comes with two samples, one server component
+    <a href="todo">TODO list</a> and a simple client-side
+    <a href="graph.html">Graph</a> animation which you can take
+    a look at to see how things work</p>
     
     <p>To begin, you must clone this project's Git repository, 
     using <code>git clone</code>. You can find the URL of the 
