Fix name of client-side demo

--- a/template/web-content/graph.html
+++ b/template/web-content/graph.html
@@ -1,6 +1,6 @@
 <html>
   <head id="head">
-    <title>Ceylon Graph Demo</title>
+    <title>Ceylon Oscilloscope Demo</title>
     <meta name="Content-Type" content="text/html; charset=utf-8;" charset="utf-8">
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" id="bootstrap">
     <link rel="stylesheet" href="/css/style.css" type="text/css" id="bootstrap">
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Ceylon Graph Demo</h1>
+      <h1>Ceylon Oscilloscope Demo</h1>
       <canvas id="graph"></canvas>
     </div>
   </body>
