--- a/template/web-content/index.html
+++ b/template/web-content/index.html
@@ -71,7 +71,7 @@ li {
     
     <p>The project comes with two samples, one server component
     <a href="todo">TODO list</a> and a simple client-side
-    <a href="graph.html">Graph</a> animation which you can take
+    <a href="graph.html">Oscilloscope</a> animation which you can take
     a look at to see how things work</p>
     
     <p>To begin, you must clone this project's Git repository, 
@@ -88,7 +88,7 @@ li {
     git clone ssh://56316b4e2d527174890001c5@sample-domain.rhcloud.com/~/git/test.git/
     </pre>
     
-    <p>Cloning the repository will create a directly named
+    <p>Cloning the repository will create a directory named
     <code>sample</code>. In it, you'll find Ceylon source code 
     located under <code>sample/sources</code> and static web
     content under <code>sample/web-content</code/>.</p
